<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mata Kuliah"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtInputMataKuliah"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_grey_border"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Jumlah Kosong (Absen)"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtInputJumlahKosong"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_grey_border"
        android:ems="10"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnSimpanMataKuliah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_primary"
        android:text="SIMPAN"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</LinearLayout>