<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtNamaMakulDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Nama Makul"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/txtJumlahKosong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Kosong : 0"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/btnAddAbsen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_primary"
        android:padding="16dp"
        android:text="ABSEN KULIAH INI"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>