...

    <string name="subject">subject</string>

    <string name="setting">setting</string>
    <string name="settings">Settings</string>
    <string name="save">SAVE</string>
    <string name="delete">Delete</string>

    <string name="notification_channel_name_class_reminder">ClassReminder</string>
    <string name="home">Home</string>
    <string name="add_new_subject">Tambah mata kuliah baru</string>
    <string name="finish">FINISH</string>
    <string name="next">NEXT</string>
...
